objects/Product2.object
<CustomObject><fields>
        <fullName>AEG_Involvement_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AEG Involvement Flag</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>DMAPP__AM_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AM Solution</label>
        <referenceTo>DMAPP__AM_Solution__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Hide_on_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to flag products that should not be shown on the Customer Portal. If the flag is checked, the product will not be shown on the portal</description>
        <label>Hide on Portal</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Line__c</fullName>
        <label>Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Student Version</fullName>
                </value>
                <value>
                    <fullName>Support Software</fullName>
                </value>
                <value>
                    <fullName>Support Software Base</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>PMD_Id__c</fullName>
        <description>Product Master Id</description>
        <label>PMD Id</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Portal_Sub_Area__c</fullName>
        <description>This column will be used for mapping of Cases created from Customer Portal. based on the product selected, the sub area will be set. The value will only be populated for Products with Release = 'No Release'</description>
        <label>Portal Sub Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CDA/SPC</fullName>
                </value>
                <value>
                    <fullName>Math/Financial</fullName>
                </value>
                <value>
                    <fullName>MATLAB</fullName>
                </value>
                <value>
                    <fullName>Deployment/T&amp;M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Product_Unique_Identifier__c</fullName>
        <description>This field will be a combination of Product Base Code, Version and Release</description>
        <externalId>true</externalId>
        <label>Product Unique Identifier</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Quotable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag used to identify if a product is quotable or not.  If this is set to true, the product is passed to quoting or trial systems, if false it will not be.</description>
        <label>Quotable</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Revenue_Class__c</fullName>
        <description>Used to assign a revenue class to a product. This is used to set the revenue class for 'dummy' products that are used on opportunities.</description>
        <label>Revenue Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Term New</fullName>
                </value>
                <value>
                    <fullName>Term Renewal</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Sales_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Flag to allow for filtering Sales vs. Service products in lookups and code. (Service products are at a lower level of granularity than Sales products are.)</inlineHelpText>
        <label>Sales Product</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Transitioned</fullName>
                </value>
                <value>
                    <fullName>Prerelease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Trialable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Flag for whether a product is available for a trial.  Should only be applicable to Sales products and only those that should be sent to AUI for creating a trial.</inlineHelpText>
        <label>Trialable</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>100</length>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><listViews>
        <fullName>AllProducts</fullName>
        <columns>Status__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>Release__c</columns>
        <columns>Version__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Topic__c</columns>
        <columns>Line__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Product_Unique_Identifier__c</columns>
        <columns>Sales_Product__c</columns>
        <columns>Quotable__c</columns>
        <columns>AEG_Involvement_Flag__c</columns>
        <columns>Product_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line__c</field>
            <operation>notEqual</operation>
            <value>Base</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>contains</operation>
            <value>2017</value>
        </filters>
        <label>All Products</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>All_Active_Sales_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Status__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Quotable__c</columns>
        <columns>Trialable__c</columns>
        <columns>AEG_Involvement_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Product__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Sales Products</label>
    </listViews><listViews>
        <fullName>All_Sales_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Status__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Quotable__c</columns>
        <columns>Trialable__c</columns>
        <columns>AEG_Involvement_Flag__c</columns>
        <columns>Sales_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Product__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Sales Products</label>
    </listViews><listViews>
        <fullName>Sales_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>notEqual</operation>
        </filters>
        <label>Sales Products</label>
    </listViews><listViews>
        <fullName>product_search</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Release__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Status__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Quotable__c</columns>
        <columns>Trialable__c</columns>
        <columns>AEG_Involvement_Flag__c</columns>
        <columns>Topic__c</columns>
        <columns>Sales_Product__c</columns>
        <columns>Hide_on_Portal__c</columns>
        <columns>Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>CV</value>
        </filters>
        <label>product search</label>
        <language>en_US</language>
    </listViews></CustomObject>